# robot-rest-api

./: .gitignore  README.md
containers/: Dockerfile  docker-compose.yml
rest/mysql/: init.sql
rest/rust/: install_all.sh
rest/rust/robot-rest-api/: Cargo.toml  curl_test.sh
rest/rust/robot-rest-api/src/: main.rs
rest/tests/: create_mission.sh  estop_off.sh  estop_on.sh  get_missions.sh  ping.sh  play_mission.sh  robot_goal.sh
ros/: mission_manager.py
samples/maps/untidy_small/: map.yaml
web/: demo.html
