[package]
name = "robot-rest-api"
version = "0.1.0"
authors = ["George Stavrinos <gstavrinos@iit.demokritos.gr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
rosrust = "0.9"
rocket = "0.4.5"
serde = "1.0.114"
rosrust_msg = "0.1"
serde_json = "1.0.57"
rocket_contrib = "0.4.5"
serde_derive = "1.0.114"

